--- a/HospiHome/Base.lproj/Main.storyboard
+++ b/HospiHome/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6dM-dL-1sg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zbI-Bq-TGG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -182,19 +182,19 @@
             <point key="canvasLocation" x="876.81159420289862" y="237.72321428571428"/>
         </scene>
         <!--Chained View Controller-->
-        <scene sceneID="hUB-Tc-Tev">
+        <scene sceneID="ycT-z0-VzS">
             <objects>
-                <viewController id="6dM-dL-1sg" customClass="ChainedViewController" customModule="HospiHome" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="quJ-Jm-PwE">
+                <viewController id="zbI-Bq-TGG" customClass="ChainedViewController" customModule="HospiHome" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dCY-97-Hg8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="vF0-TO-ZfG"/>
+                        <viewLayoutGuide key="safeArea" id="dNm-PM-6iy"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lwB-ya-xeX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e8z-0z-IFA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1455" y="238"/>
+            <point key="canvasLocation" x="-1425" y="226"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="dlZ-ht-ibz">
@@ -1945,7 +1945,7 @@ Happy Pinning (and reading)!
         <image name="dr_profile_img" width="76" height="76"/>
         <image name="house.fill" catalog="system" width="64" height="52"/>
         <image name="location1" width="92" height="132"/>
-        <image name="logo" width="60" height="60"/>
+        <image name="logo" width="499" height="479"/>
         <image name="profile_img" width="76" height="76"/>
         <image name="seif" width="960" height="960"/>
         <image name="user" width="24" height="24"/>
